--- a/packaging/systemd/bind9-api.service
+++ b/packaging/systemd/bind9-api.service
@@ -3,7 +3,7 @@ Description=Bind9 API Service
 After=network.target
 
 [Service]
-ExecStart=/opt/bind9-api/0.1.0/bind9-api
+ExecStart=/usr/local/bin/bind9-api
 Restart=always
 RestartSec=5
 User=nobody
