--- a/packaging/systemd/bind9-api.service
+++ b/packaging/systemd/bind9-api.service
@@ -3,7 +3,7 @@ Description=Bind9 API Service
 After=network.target
 
 [Service]
-ExecStart=/usr/local/bin/bind9-api
+ExecStart=/usr/local/bin/bind9-api --config /etc/bind9-api/config.yml
 Restart=always
 RestartSec=5
 User=nobody
